crates/strider/tests/snapshots/v3__x64__control__factorial.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v6" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v8" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "7" -> "v6" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "16" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="φ RAX", shape=house, fillcolor="#163030"];
  "5" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="φ R8", shape=house, fillcolor="#163030"];
  "5" -> "24" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "16" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "22" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="arg[0] ← RDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v2" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "31" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "14" -> "31" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "15" -> "31" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "33" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "43" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "41" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
